assignment2-v1.0/assignment2/initial/src/main/csel/parser/.antlr/CSELParser.py
# Generated from d:\HK202\PPL\Assignment_2\assignment2-v1.0\assignment2\initial\src\main\csel\parser\CSEL.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CSELParser ( Parser ):

    grammarFileName = "CSEL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "','", "':'", "'='", "'['", "']'", 
                     "'('", "')'", "'{'", "'}'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "<INVALID>", 
                     "'!'", "'+.'", "'==.'", "'Break'", "'Continue'", "'If'", 
                     "'Elif'", "'Else'", "'While'", "'For'", "'Of'", "'In'", 
                     "'Call'", "'Return'", "'Function'", "'Let'", "'Constant'", 
                     "'str2num'", "'num2str'", "'str2bool'", "'bool2str'", 
                     "'print'", "'printLn'", "'read'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "COMMENT", 
                      "LIT_TYPE", "NUMBER", "BOOLEAN", "CON_IDENTIFIERS", 
                      "VAR_IDENTIFIERS", "RELATION_OP", "LOGIC_BINARY_OP", 
                      "PLUS_OP", "MINUS_OP", "MULTIPLYING_OP", "LOGICAL_UNARY_OP", 
                      "PLUS_OP_STR", "RELATION_OP_STR", "BREAK", "CONTINUE", 
                      "IF", "ELIF", "ELSE", "WHILE", "FOR", "OF", "IN", 
                      "CALL", "RETURN", "FUNCTION", "LET", "CONSTANT", "STR2NUM", 
                      "NUM2STR", "STR2BOOL", "BOOL2STR", "PRINT", "PRINTLN", 
                      "READ", "STRINGLIT", "SEP", "WS", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_declares = 1
    RULE_var_declare = 2
    RULE_normal_declare = 3
    RULE_var_list = 4
    RULE_var_part = 5
    RULE_var_normal = 6
    RULE_const_declare = 7
    RULE_var_list_const = 8
    RULE_var_part_const = 9
    RULE_var_const = 10
    RULE_var = 11
    RULE_function_declare = 12
    RULE_parameters = 13
    RULE_param_list = 14
    RULE_func_body = 15
    RULE_func_body_stm = 16
    RULE_stm = 17
    RULE_assign_stm = 18
    RULE_index_exp = 19
    RULE_index_op = 20
    RULE_index = 21
    RULE_key_exp = 22
    RULE_key_op = 23
    RULE_if_stm = 24
    RULE_stm_else_if = 25
    RULE_for_stm = 26
    RULE_for_in = 27
    RULE_for_of = 28
    RULE_while_stm = 29
    RULE_break_stm = 30
    RULE_continue_stm = 31
    RULE_call_stm = 32
    RULE_call = 33
    RULE_pass_param = 34
    RULE_params = 35
    RULE_param = 36
    RULE_return_stm = 37
    RULE_exp = 38
    RULE_exp1 = 39
    RULE_exp2 = 40
    RULE_exp3 = 41
    RULE_exp4 = 42
    RULE_exp5 = 43
    RULE_exp6 = 44
    RULE_exp7 = 45
    RULE_index_operator = 46
    RULE_key_operator = 47
    RULE_exp8 = 48
    RULE_operands = 49
    RULE_lit = 50
    RULE_json = 51
    RULE_key_value = 52
    RULE_array = 53
    RULE_element = 54

    ruleNames =  [ "program", "declares", "var_declare", "normal_declare", 
                   "var_list", "var_part", "var_normal", "const_declare", 
                   "var_list_const", "var_part_const", "var_const", "var", 
                   "function_declare", "parameters", "param_list", "func_body", 
                   "func_body_stm", "stm", "assign_stm", "index_exp", "index_op", 
                   "index", "key_exp", "key_op", "if_stm", "stm_else_if", 
                   "for_stm", "for_in", "for_of", "while_stm", "break_stm", 
                   "continue_stm", "call_stm", "call", "pass_param", "params", 
                   "param", "return_stm", "exp", "exp1", "exp2", "exp3", 
                   "exp4", "exp5", "exp6", "exp7", "index_operator", "key_operator", 
                   "exp8", "operands", "lit", "json", "key_value", "array", 
                   "element" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    COMMENT=11
    LIT_TYPE=12
    NUMBER=13
    BOOLEAN=14
    CON_IDENTIFIERS=15
    VAR_IDENTIFIERS=16
    RELATION_OP=17
    LOGIC_BINARY_OP=18
    PLUS_OP=19
    MINUS_OP=20
    MULTIPLYING_OP=21
    LOGICAL_UNARY_OP=22
    PLUS_OP_STR=23
    RELATION_OP_STR=24
    BREAK=25
    CONTINUE=26
    IF=27
    ELIF=28
    ELSE=29
    WHILE=30
    FOR=31
    OF=32
    IN=33
    CALL=34
    RETURN=35
    FUNCTION=36
    LET=37
    CONSTANT=38
    STR2NUM=39
    NUM2STR=40
    STR2BOOL=41
    BOOL2STR=42
    PRINT=43
    PRINTLN=44
    READ=45
    STRINGLIT=46
    SEP=47
    WS=48
    ERROR_CHAR=49
    UNCLOSE_STRING=50
    ILLEGAL_ESCAPE=51
    UNTERMINATED_COMMENT=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CSELParser.EOF, 0)

        def declares(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.DeclaresContext)
            else:
                return self.getTypedRuleContext(CSELParser.DeclaresContext,i)


        def getRuleIndex(self):
            return CSELParser.RULE_program




    def program(self):

        localctx = CSELParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.FUNCTION) | (1 << CSELParser.LET) | (1 << CSELParser.CONSTANT))) != 0):
                self.state = 110
                self.declares()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 116
            self.match(CSELParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaresContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare(self):
            return self.getTypedRuleContext(CSELParser.Var_declareContext,0)


        def function_declare(self):
            return self.getTypedRuleContext(CSELParser.Function_declareContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_declares




    def declares(self):

        localctx = CSELParser.DeclaresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declares)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSELParser.LET, CSELParser.CONSTANT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.var_declare()
                pass
            elif token in [CSELParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.function_declare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def normal_declare(self):
            return self.getTypedRuleContext(CSELParser.Normal_declareContext,0)


        def const_declare(self):
            return self.getTypedRuleContext(CSELParser.Const_declareContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_var_declare




    def var_declare(self):

        localctx = CSELParser.Var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_declare)
        try:
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSELParser.LET]:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.normal_declare()
                pass
            elif token in [CSELParser.CONSTANT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.const_declare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Normal_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(CSELParser.LET, 0)

        def var_list(self):
            return self.getTypedRuleContext(CSELParser.Var_listContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_normal_declare




    def normal_declare(self):

        localctx = CSELParser.Normal_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_normal_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(CSELParser.LET)
            self.state = 127
            self.var_list()
            self.state = 128
            self.match(CSELParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_part(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.Var_partContext)
            else:
                return self.getTypedRuleContext(CSELParser.Var_partContext,i)


        def getRuleIndex(self):
            return CSELParser.RULE_var_list




    def var_list(self):

        localctx = CSELParser.Var_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.var_part()
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSELParser.T__1:
                self.state = 131
                self.match(CSELParser.T__1)
                self.state = 132
                self.var_part()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_partContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_normal(self):
            return self.getTypedRuleContext(CSELParser.Var_normalContext,0)


        def LIT_TYPE(self):
            return self.getToken(CSELParser.LIT_TYPE, 0)

        def exp(self):
            return self.getTypedRuleContext(CSELParser.ExpContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_var_part




    def var_part(self):

        localctx = CSELParser.Var_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_part)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.var_normal()
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.T__2:
                self.state = 139
                self.match(CSELParser.T__2)
                self.state = 140
                self.match(CSELParser.LIT_TYPE)


            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.T__3:
                self.state = 143
                self.match(CSELParser.T__3)
                self.state = 144
                self.exp()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_normalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR_IDENTIFIERS(self):
            return self.getToken(CSELParser.VAR_IDENTIFIERS, 0)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.NUMBER)
            else:
                return self.getToken(CSELParser.NUMBER, i)

        def getRuleIndex(self):
            return CSELParser.RULE_var_normal




    def var_normal(self):

        localctx = CSELParser.Var_normalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_normal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(CSELParser.VAR_IDENTIFIERS)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.T__4:
                self.state = 148
                self.match(CSELParser.T__4)
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CSELParser.NUMBER:
                    self.state = 149
                    self.match(CSELParser.NUMBER)
                    self.state = 154
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==CSELParser.T__1:
                        self.state = 150
                        self.match(CSELParser.T__1)
                        self.state = 151
                        self.match(CSELParser.NUMBER)
                        self.state = 156
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 159
                self.match(CSELParser.T__5)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTANT(self):
            return self.getToken(CSELParser.CONSTANT, 0)

        def var_list_const(self):
            return self.getTypedRuleContext(CSELParser.Var_list_constContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_const_declare




    def const_declare(self):

        localctx = CSELParser.Const_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_const_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(CSELParser.CONSTANT)
            self.state = 163
            self.var_list_const()
            self.state = 164
            self.match(CSELParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_list_constContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_part_const(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.Var_part_constContext)
            else:
                return self.getTypedRuleContext(CSELParser.Var_part_constContext,i)


        def getRuleIndex(self):
            return CSELParser.RULE_var_list_const




    def var_list_const(self):

        localctx = CSELParser.Var_list_constContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_var_list_const)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.var_part_const()
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSELParser.T__1:
                self.state = 167
                self.match(CSELParser.T__1)
                self.state = 168
                self.var_part_const()
                self.state = 173
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_part_constContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_const(self):
            return self.getTypedRuleContext(CSELParser.Var_constContext,0)


        def exp(self):
            return self.getTypedRuleContext(CSELParser.ExpContext,0)


        def LIT_TYPE(self):
            return self.getToken(CSELParser.LIT_TYPE, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_var_part_const




    def var_part_const(self):

        localctx = CSELParser.Var_part_constContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_var_part_const)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.var_const()
            self.state = 177
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.T__2:
                self.state = 175
                self.match(CSELParser.T__2)
                self.state = 176
                self.match(CSELParser.LIT_TYPE)


            self.state = 179
            self.match(CSELParser.T__3)
            self.state = 180
            self.exp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_constContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CON_IDENTIFIERS(self):
            return self.getToken(CSELParser.CON_IDENTIFIERS, 0)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.NUMBER)
            else:
                return self.getToken(CSELParser.NUMBER, i)

        def getRuleIndex(self):
            return CSELParser.RULE_var_const




    def var_const(self):

        localctx = CSELParser.Var_constContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_var_const)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.match(CSELParser.CON_IDENTIFIERS)
            self.state = 195
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.T__4:
                self.state = 183
                self.match(CSELParser.T__4)
                self.state = 192
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CSELParser.NUMBER:
                    self.state = 184
                    self.match(CSELParser.NUMBER)
                    self.state = 189
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==CSELParser.T__1:
                        self.state = 185
                        self.match(CSELParser.T__1)
                        self.state = 186
                        self.match(CSELParser.NUMBER)
                        self.state = 191
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 194
                self.match(CSELParser.T__5)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_normal(self):
            return self.getTypedRuleContext(CSELParser.Var_normalContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_var




    def var(self):

        localctx = CSELParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 197
            self.var_normal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(CSELParser.FUNCTION, 0)

        def VAR_IDENTIFIERS(self):
            return self.getToken(CSELParser.VAR_IDENTIFIERS, 0)

        def parameters(self):
            return self.getTypedRuleContext(CSELParser.ParametersContext,0)


        def func_body(self):
            return self.getTypedRuleContext(CSELParser.Func_bodyContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_function_declare




    def function_declare(self):

        localctx = CSELParser.Function_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_function_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            self.match(CSELParser.FUNCTION)
            self.state = 200
            self.match(CSELParser.VAR_IDENTIFIERS)
            self.state = 201
            self.parameters()
            self.state = 202
            self.func_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_list(self):
            return self.getTypedRuleContext(CSELParser.Param_listContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_parameters




    def parameters(self):

        localctx = CSELParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_parameters)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 204
            self.match(CSELParser.T__6)
            self.state = 207
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSELParser.VAR_IDENTIFIERS]:
                self.state = 205
                self.param_list()
                pass
            elif token in [CSELParser.T__7]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 209
            self.match(CSELParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(CSELParser.VarContext,0)


        def param_list(self):
            return self.getTypedRuleContext(CSELParser.Param_listContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_param_list




    def param_list(self):

        localctx = CSELParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_param_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 216
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.state = 211
                self.var()
                self.state = 212
                self.match(CSELParser.T__1)
                self.state = 213
                self.param_list()
                pass

            elif la_ == 2:
                self.state = 215
                self.var()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_body_stm(self):
            return self.getTypedRuleContext(CSELParser.Func_body_stmContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_func_body




    def func_body(self):

        localctx = CSELParser.Func_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_func_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 218
            self.match(CSELParser.T__8)
            self.state = 219
            self.func_body_stm()
            self.state = 220
            self.match(CSELParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_body_stmContext(ParserRuleContext):
